--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.7",
+    "deepmerge": "^4.2.2",
+    "lodash": "^4.17.21",
     "next": "12.0.8",
     "react": "^17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13",
+    "tailwindcss": "^3.0.15",
     "typescript": "4.5.4"
   }
 }
